	- simple visualization shows RMS of displayed signal in side bars,
	- support for HEVC, VP8 and VP9 decoding in VA-API (not tested!),
	- falling horizontal lines behave better visualizations,
	- play next entry after playback error (as default),
	- support for HEVC decoding in VDPAU,
	- removed console for Windows,
	- fix decoding BINK Video,
	- bugfix,

Changes in QMPlay2 build 15.10.18:
	- new OpenGL 2 module (with OpenGL|ES 2.0 support) replaces the old OpenGL module,
	- due to new libass 0.13.0, FontConfig is used only on 32-bit Windows XP,
	- correct display information about buffered time and size,
	- DirectDraw improvements,
	- many minor fixes,

Changes in QMPlay2 build 15.10.03:
	- user can hide menu bar by pressing Alt+Ctrl+M or from "Widgets" context menu,
	- minimum and maximum frequency in equalizer can be changed,
	- basic WebVTT subtitles support (SRT module),
	- added preamp and dB tooltip to equalizer,
	- fixed possible deadlock in AudioCD,
	- small bugfix,

Changes in QMPlay2 build 15.08.12:
	- deinterlacing fixes in VAApi,
	- minor fixes for Windows,
	- MPRIS2 bugfix,

Changes in QMPlay2 build 15.07.13:
	- fixed problem from previous release with playing video (sometimes video plays at maximum speed),

Changes in QMPlay2 build 15.07.12:
	- keyboard shortcut (Shift+L) for locking widgets,
	- fixed seeking by searching key frames in buffer,
	- aspect ratio is now correctly updated,
	- fixed playback in live streams,
	- small fixes in video playback,
	- VAApi bugfix,

Changes in QMPlay2 build 15.06.26:
	- better VSync support for OpenGL video output,
	- OpenSLES audio output (for Android),
	- basic OS X support,
	- minor bug fixes,

Zmiany w QMPlay2 build 15.06.06:
	- większy pasek zmiany rozmiaru okien dla ekranów dotykowych,
	- zoom na ekranie dotykowym (pinch gesture),
	- poprawiony odczyt okładek płyt z katalogu,
	- kompatybilność z FFmpeg 2.0 oraz 2.1,
	- AudioCD jako osobny moduł,

Zmiany w QMPlay2 build 15.05.30: