@@ -1,6 +1,6 @@
 #QMPlay2 - QT Media Player 2
 
->QMPlay2 is a video and audio player. It can play all formats supported by FFmpeg, libmodplug (including J2B and SFX). It also supports Audio CD, raw files and Rayman 2 music. It contains YouTube and Prostopleer browser.
+>QMPlay2 is a video and audio player. It can play all formats supported by FFmpeg, libmodplug (including J2B and SFX). It also supports Audio CD, raw files, Rayman 2 music and chiptunes. It contains YouTube and Prostopleer browser.
 
 ##Instalation
 
