@@ -15,7 +15,6 @@ Users can resume downloading
 Users can introduce aspect ratio and zoom
 
 MIDI - ?
-SID files - ?
 MKV - ordered chapters - ?
 Exporting audio during playback - ?
 Decoding and video playback in separate threads - ?
