@@ -1,0 +1,5 @@
+<RCC>
+	<qresource>
+        <file alias="Chip">Chip.png</file>
+	</qresource>
+</RCC>
