@@ -2,6 +2,7 @@ TEMPLATE = subdirs
 SUBDIRS = FFmpeg Inputs Modplug Playlists Subtitles QPainter Extensions Visualizations AudioFilters VideoFilters
 !contains(QT_CONFIG, opengles1): SUBDIRS += OpenGL2
 !android: SUBDIRS += AudioCD
+
 linux*: {
 	!android: SUBDIRS += ALSA
 	else: SUBDIRS += OpenSLES
@@ -9,8 +10,13 @@ linux*: {
 else {
 	SUBDIRS += PortAudio
 }
+
 unix:!macx:!android {
 	!greaterThan(QT_MAJOR_VERSION, 4)|qtHaveModule(x11extras): SUBDIRS += XVideo
 	packagesExist(libpulse-simple):	SUBDIRS += PulseAudio
 }
+
 win32: SUBDIRS += FileAssociation DirectX
+
+macx: QT_CONFIG -= no-pkg-config
+win32|packagesExist(libsidplayfp)|packagesExist(libgme): SUBDIRS += Chiptune
